@@ -1,5 +1,12 @@
 2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Display initial constraints values.
+	* include/roboptim/core/problem.hxx: Display constraints initial values.
+	* src/result.cc: Restyle.
+	* tests/simple.stdout: Regenerate.
+
+2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Update forward declarations.
 	* include/roboptim/core/fwd.hh: Add ConstantFunction.
 
